--- a/bower.json
+++ b/bower.json
@@ -5,8 +5,8 @@
     "bootstrap": "~3.0.0",
     "font-awesome": "~4.0.0",
     "modernizr": "~2.6.2",
-    "jquery": "~1.9.1"
+    "jquery": "~1.9.1",
+    "jquery-backstretch": "~2.0.4"
   },
   "devDependencies": {}
 }
-
